application/site/public/theme/mobile/css/organisms/_containers.scss
.container__header .row-fluid .span3,
.container__header .slogan,
.container__banner,
.container__content .sidebar,
.container__copyright .copyright,
.is-hidden,
.hidden-phone {
    display: none;
}

.container__content {
    padding-left: 20px;
    padding-right: 20px;
}

.container__header {
    margin-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    width: 100%;
}

.container__content {
    padding-top: $grid-padding;
    padding-bottom: $grid-padding;

    &.police {
        .contact__inner {
            margin-left: 0;
            border: 0 none;
            padding: 0;

            a {
                text-decoration: none;
            }
        }

        article {
            border: 0 none !important;
            padding-bottom: 0 !important;
        }
    }
}

.container__copyright {
    padding-top: 13px;
    padding-bottom: 13px;
    text-align: center;
    border-top: 1px solid darken($grayLighter, 7%);
    font-size: $fontSizeSmall;

    a {
        text-decoration: none;
    }
}

.container__footer {
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: $grid-padding;
  padding-top: $gutter-width / 2;
  background-color: $wellBackground;
  border-top: 1px solid darken($grayLighter, 7%);
  border-bottom: 1px solid darken($grayLighter, 7%);

    .button {
        float: right;
    }
}

.container__footer_menu {
  ul {
    margin: 0;

    li a {
      padding-left: 20px;
      padding-right: 20px;
    }
  }
}

